# MicropolisCore

./: CLAUDE.md  CMakeLists.txt  build_release.ps1  settings.json
MicropolisEngine/: CMakeLists.txt
MicropolisEngine/src/: allocate.cpp  async_scanner.cpp  async_scanner.h  callback.cpp  data_types.h  evaluate.cpp  fileio.cpp  graph.cpp  map_type.h  micropolis.cpp  micropolis.h  platform.h  position.h  save_format.cpp  save_format.h  sprite.cpp  tile_flags.h  world_dimensions.cpp  world_dimensions.h
MicropolisEngine/src/config/: GameConfig.cpp  GameConfig.h  ScenarioConfig.cpp  ScenarioConfig.h
MicropolisEngine/src/events/: EventBus.h  EventTypes.h
MicropolisEngine/src/subsystems/: AStarPathfinder.cpp  AStarPathfinder.h  BudgetSystem.cpp  BudgetSystem.h  DisasterSystem.cpp  DisasterSystem.h  EvaluationSystem.cpp  EvaluationSystem.h  IMapAccess.h  ISubsystem.h  PowerSystem.cpp  PowerSystem.h  TrafficSystem.cpp  TrafficSystem.h
cmake/: MicropolisEngineConfig.cmake.in
config/: default_config.json
tests/: CMakeLists.txt  golden_master.cpp  integration_tests.cpp  test_budget_system.cpp  test_game_config.cpp  test_power_system.cpp  test_save_format.cpp  test_scenario_config.cpp  test_traffic_system.cpp  test_world_dimensions.cpp  unit_tests.cpp
